# rust-app-sample

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: lib.rs  main.rs
